styles.css
/* ... */
.forumng-draft-inreplyto {
    font-size: 0.85em;
}

.forumng-drafts {
    margin: 1em 0 2em;
}
.forumng-drafts .forumng-heading,
.forumng-flagged .forumng-heading {
    margin: 0 0 0.5em;
}
.forumng-drafts .forumng-heading h3,
.forumng-flagged .forumng-heading h3{
    display: inline;
    margin: 0;
}
.forumng-flagged {
    margin: 2em 0 1em;
}

div.forumng-flag,
div.forumng-flagpost {
    display: inline;
    padding-right: 0.5em;
}

form.forumng-flag,
form.forumng-flagpost {
    display: inline;
    padding-left: 0.5em;
}
form.forumng-flag div,
form.forumng-flagpost div {
    display:inline;
}
div.forumng-flagpost a img {
    padding-right: 0.5em;
    vertical-align: -3px;
}

.forumng-shareinfo {
    margin: 2em 0 2em;
}

.forumng-flagged-link {
    padding-bottom: 2px;
    border-bottom: 2px solid #CCCCCC;
}

.forumng-flagged-link a {
    text-decoration: none;
}

.forumng-startedby-wrapper {
    margin-left: 51px;
    overflow: hidden;
}

.forumng-startedbyimage {
    display: inline;
    float: left;
    margin-right: 5px;
    overflow: hidden;
}

.forumng-startedbyuser {
    display: inline;
    vertical-align:middle;
    text-align: left;
    width: 355px;
    overflow: hidden;
}

.forumng-moderator {
    display: block;
}
.forumng-moderator-flag {
    font-weight: bold;
}

/*
// Discussion page styles
/////////////////////////
*/

#forumng-arrowback {
    margin: 1em 0;
}

.forumng-replies {
    margin-left: 40px;
}

h2.accesshide {
    margin: 0 0 5px 40px;
    padding-bottom: 5px;
    padding-left:0.5em;
    font-size: 0.85em;
    border-bottom: 1px dotted #aaa;
    top: auto;
    left: -10000px;
}

h2.forumng-author {
    font-size: 1.0em;
    padding-right:0.5em;
    display:inline;
}

.forumng-replies .forumng-replies .forumng-replies .forumng-replies .forumng-replies {
    margin-left: 30px;
}

.forumng-replies .forumng-replies .forumng-replies .forumng-replies .forumng-replies
.forumng-replies .forumng-replies .forumng-replies .forumng-replies .forumng-replies {
    margin-left: 20px;
}

#forumng-main .forumng-stop-indent .forumng-replies{
    margin-left: 0px;
}

.forumng-nojs
.forumng-replies .forumng-replies .forumng-replies .forumng-replies .forumng-replies
.forumng-replies .forumng-replies .forumng-replies .forumng-replies .forumng-replies
.forumng-replies .forumng-replies .forumng-replies .forumng-replies .forumng-replies
.forumng-replies .forumng-replies .forumng-replies .forumng-replies .forumng-replies {
    margin-left: 0px;
}

.forumng-post {
    margin-bottom:1em;
    border:1px solid #aaa;
    padding:0.5em;
    max-width:800px;
}

.forumng-pic {
    float:left;
    width:35px;
}
.forumng-subject,
.forumng-info,
.forumng-summary,
.forumng-deleted-info {
    margin-left:35px;
    padding-left:0.5em;
}

.forumng-info {
    position: relative;
    padding-right: 16px;
}
.forumng-info .forumng-flag .forumng-flagpost {
    position: absolute;
    right: -0.5em;
}

.forumng-deleted .forumng-pic,
.forumng-deselected .forumng-pic{
    opacity:0.5;
    filter: alpha(opacity=50);
}
.forumng-deleted .forumng-info,
.forumng-deleted .forumng-summary .forumng-text,
.forumng-deleted .forumng-message,
.forumng-deleted .forumng-subject,
.forumng-deselected .forumng-info,
.forumng-deselected .forumng-summary .forumng-text,
.forumng-deselected .forumng-message,
.forumng-deselected .forumng-subject {
    color: #888;
}
.forumng-deselected a:link,
.forumng-deselected a:active,
.forumng-deselected a:visited,
.forumng-deselected a:hover {
    color: #7f98b2;
}

.forumng-summary .forumng-text {
    display:inline;
}

.forumng-info {
    font-size:0.85em;
}
.forumng-subject {
    margin-top:0.5em;
    word-break: break-word;
}
h3.forumng-subject {
    font-size:1em;
    margin-top:0.5em;
    margin-bottom:0;
}
.forumng-summary h3 {
    font-size:1em;
    margin:0;
    display:inline;
}
.forumng-summary {
    margin-top:0.5em;
}
.forumng-postmain {
    margin-left:35px;
    padding-left:0.5em;
    padding-top:0.5em;
}
.forumng-postfooter {
    margin:0.5em 0 0;
    text-align:right;
}
/* Hide buttons if copied into message */
.forumng-message .forumng-postfooter, .forumng-message .forumng-commands,
.forumng-message .forumng-expandcontainer {
    display: none;
}

ul.forumng-commands {
    display: inline-block;
    margin: 0;
    padding: 0;
    white-space: nowrap;
    float: left;
    margin-bottom: .7em;
}
.ie7 ul.forumng-commands {
    display: inline;
}
ul.forumng-commands li {
    display:inline;
    list-style-type:none;
    margin:0 0 0 2em;
    padding:0;
    position: relative;
}
ul.forumng-commands li {
    font-size: 0.85em;
}
ul.forumng-commands li.forumng-replylink {
    font-size: 1.0em;
}
.forumng-endpost {
    clear:left;
}

.forumng-post.forumng-important {
    background-color: #F0E1B3;
}

.forumng-post.forumng-read {
    color:#222;
}
.forumng-post.forumng-unread {
    background: #FFD991;
}

.forumng-post.forumng-unread .forumng-info {
    font-weight: bold;
}

.forumng-lockmessage .forumng-post {
    background: #FFBBBB;
    margin-bottom: 2em;
}

.forumng-attachments {
    display: block;
    text-align:right;
    font-size: 0.85em;
    margin: 0 0 0.5em;
    padding: 0;
}
.forumng-attachments li {
    display:inline;
    list-style-type:none;
    margin:0 0 0 2em;
}
.forumng-attachments li a {
    white-space: nowrap;
}
.forumng-attachments a:link,
.forumng-attachments a:visited,
.forumng-attachments a:hover {
    text-decoration: none;
}
.forumng-attachments img {
    vertical-align: -4px;
}
.forumng-attachments a:hover span {
    text-decoration: underline;
}


#forumng-expandall {
    text-align:right;
    margin-bottom:0.5em;
}

#forumng-saveallratings {
    font-size:0.85em;
}

.forumng-deleted-discussion .forumng-post {
    color: #888;
}

.forumng-bad-browser {
    font-size: 0.85em;
    margin-top: 2em;
}

.forumng-bad-browser h3 {
    display: inline;
    margin: 0;
    font-size: 1em;
}

.forumng-bad-browser p {
    display: inline;
    margin: 0;
}
/* ... */

